--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
     "showDetails": true
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "^14.2.5",
+    "@10up/next-redis-cache-provider": "^2.0.0-next.0",
     "@headstartwp/core": "^1.5.0-next.9",
     "@headstartwp/next": "^1.5.0-next.10",
-    "@10up/next-redis-cache-provider": "^2.0.0-next.0"
+    "@wordpress/block-library": "^9.22.0",
+    "next": "^14.2.5",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@10up/eslint-config": "^4.0.0",
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "eslint-import-resolver-typescript": "^3.6.3"
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "typescript": "^5"
   }
 }
